# hyph-sporea

./: .gitignore  DESCRIPTION  README.md  gui_main.py  hyph-sporea.Rproj  pyproject.toml  requirements.txt  tiff_to_jpeg.py
Python/: __init__.py  coco_to_yolo.py  count_CLAQ.py  count_spores.py  get_user_input_function.py  label_images_coco_to_yolo.py  label_images_coco_to_yolo_verification_annotation_images.py  tiff_to_jpeg.py  tiff_to_jpeg_function.py  untitled0.py  untitled2.py  untitled3.py  untitled4.py  untitled5.py  untitled6.py  untitled7.py  yolo_model.py  yolo_model_download.py  yolo_model_train.py  yolo_model_validation.py
Python/analysis/: __init__.py  statistics.py
Python/core/: __init__.py  processor.py  utils.py
Python/functions/: fct_model_download.py  fct_preprocess_image_for_SAM.py
Python/gui/: __init__.py  annotation_tool.py  main_gui.py  spore_counter.py  spore_counter2.py  spore_counter3.py
Python/image_processing/: __init__.py  conversion.py  preprocessing.py  visualization.py
Python/image_processing/stitching/: image_stitcher.py  image_stitcher_script.py  overlap_detector.py  stitcher_gui.py
Python/models/: __init__.py  sam_model.py  unet_model.py  yolo_model.py
Python/reporting/: __ini__.py  reporting.py
Python/workflow/: __init__.py  workflow.py
R/: plot_CLAQ.R  plot_spores.R
analyses/: pipeline.py  yolo_model.py
analyses/pipeline/: example_workflow.py  example_workflow_2.py  main.py  pipeline_config.py  workflow.py
