[project]
name = "hyph-sporea"
version = "0.1.0"
description = "Automated analysis of aquatic hyphomycete sporulation using imaging and deep learning."
authors = [
    {name = "Titouan Dionet",email = "titouan.dionet@univ-lorraine.fr"}
]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
